Update skill section

--- a/index.html
+++ b/index.html
@@ -241,27 +241,49 @@
               <h3>Software Development</h3>
               <p>Java</p>
               <div class="skill__container">
-                <div class="skill java" style="--strength: 90%">90%</div>
+                <div class="skill" style="--strength: 90%">90%</div>
               </div>
 
               <p>JavaScript</p>
               <div class="skill__container">
-                <div class="skill javascript" style="--strength: 75%">70%</div>
+                <div class="skill" style="--strength: 75%">70%</div>
+              </div>
+
+              <p>Dart</p>
+              <div class="skill__container">
+                <div class="skill" style="--strength: 80%">80%</div>
               </div>
 
               <p>Kotlin</p>
               <div class="skill__container">
-                <div class="skill kotlin" style="--strength: 30%">30%</div>
+                <div class="skill" style="--strength: 30%">30%</div>
               </div>
 
               <p>Android S.D.K</p>
               <div class="skill__container">
-                <div class="skill android-sdk" style="--strength: 60%">60%</div>
+                <div class="skill" style="--strength: 60%">60%</div>
+              </div>
+
+              <p>Flutter</p>
+              <div class="skill__container">
+                <div class="skill" style="--strength: 60%">80%</div>
               </div>
 
               <p>Node JS</p>
               <div class="skill__container">
-                <div class="skill node-js" style="--strength: 70%">75%</div>
+                <div class="skill" style="--strength: 70%">75%</div>
+              </div>
+            </div>
+
+            <div class="row">
+              <h3>Design</h3>
+              <p>Inkscape</p>
+              <div class="skill__container">
+                <div class="skill" style="--strength: 80%">80%</div>
+              </div>
+              <p>GIMP</p>
+              <div class="skill__container">
+                <div class="skill" style="--strength: 30%">30%</div>
               </div>
             </div>
           </div>
