--- a/index.html
+++ b/index.html
@@ -208,23 +208,29 @@
             <div class="timeline">
               <div class="timeline__container left">
                 <div class="content">
-                  <h2>2017 - 2022</h2>
-                  <h3>Nnamdi Azikiwe University</h3>
-                  <p>Electronics and Computer Engineering</p>
+                  <h3>Nnamdi Azikiwe University &nbsp;<span>(2017 - 2022)</span></h3>
+                  <h4>Electronics and Computer Engineering</h4>
+                  <p>Studied and acquired a B.Eng degree in Hardware Engineering.</p>
                 </div>
               </div>
               <div class="timeline__container right">
                 <div class="content">
-                  <h2>March 2021 - August 2021</h2>
-                  <h3>Native Android Developer</h3>
-                  <p>Leon Enterprise (Tune L.L.C)</p>
+                  <h3>Native Android Developer &nbsp;<span>(Mar 2021 - Aug 2021)</span></h3>
+                  <h4>Leon Enterprise (Tune L.L.C)</h4>
+                  <p>
+                    Worked with a cross-functional team of Software Developers to build a mobile app with collaborative media
+                    streaming features.
+                  </p>
                 </div>
               </div>
-              <div class="timeline__container right">
+              <div class="timeline__container left">
                 <div class="content">
-                  <h2>Dec 2022 - Present</h2>
-                  <h3>Flutter Developer</h3>
-                  <p>Technobs Digital Solutions</p>
+                  <h3>Flutter Developer &nbsp;<span>(Dec 2022 - Present)</span></h3>
+                  <h4>Technobs Digital Solutions</h4>
+                  <p>
+                    Currently working to deliver cross-platform mobile apps for company's clients. I am also in-charge of
+                    guiding and tutoring interns on Flutter as an alternative to native mobile application development.
+                  </p>
                 </div>
               </div>
             </div>
@@ -234,7 +240,7 @@
 
       <section class="skills" id="skills">
         <div class="row">
-          <h2>Skills</h2>
+          <h2>Core Skills</h2>
 
           <div class="column">
             <div class="row">
@@ -261,12 +267,12 @@
 
               <p>Android S.D.K</p>
               <div class="skill__container">
-                <div class="skill" style="--strength: 60%">60%</div>
+                <div class="skill" style="--strength: 70%">70%</div>
               </div>
 
               <p>Flutter</p>
               <div class="skill__container">
-                <div class="skill" style="--strength: 60%">80%</div>
+                <div class="skill" style="--strength: 60%">60%</div>
               </div>
 
               <p>Node JS</p>
@@ -277,6 +283,10 @@
 
             <div class="row">
               <h3>Design</h3>
+              <p>CSS</p>
+              <div class="skill__container">
+                <div class="skill" style="--strength: 90%">90%</div>
+              </div>
               <p>Inkscape</p>
               <div class="skill__container">
                 <div class="skill" style="--strength: 80%">80%</div>
