--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#project" class="nav__link">Projects</a>
             </li>
             <li class="nav__item">
-              <a href="#resume" class="nav__link">Resume</a>
+              <a href="#experience" class="nav__link">Experience</a>
             </li>
             <li class="nav__item">
               <a href="#skills" class="nav__link">Skills</a>
@@ -201,9 +201,9 @@
         </div>
       </section>
 
-      <section class="resume" id="resume">
+      <section class="experience" id="experience">
         <div class="row">
-          <h2>Resume</h2>
+          <h2>Experience</h2>
           <div>
             <div class="timeline">
               <div class="timeline__container left">
