--- a/index.html
+++ b/index.html
@@ -252,11 +252,22 @@
               </div>
               <div class="timeline__container left">
                 <div class="content">
-                  <h3>Flutter Developer &nbsp;<span>(Dec 2022 - Present)</span></h3>
+                  <h3>Flutter Developer &nbsp;<span>(Dec 2022 - May 2023)</span></h3>
                   <h4>Technobs Digital Solutions</h4>
                   <p>
-                    Currently working to deliver cross-platform mobile apps for company's clients. I am also in-charge of
-                    guiding and tutoring interns on Flutter as an alternative to native mobile application development.
+                    Worked to deliver cross-platform mobile apps for company's clients and I was also in-charge of guiding
+                    and tutoring interns on Flutter as an alternative to native mobile application development.
+                  </p>
+                </div>
+              </div>
+              <div class="timeline__container right">
+                <div class="content">
+                  <h3>Moblie Application Developer &nbsp;<span>(May 2023 - Present)</span></h3>
+                  <h4>Farstcart Technologies Ltd</h4>
+                  <p>
+                    ...As a software engineer at FarstCart, I play a vital role in driving the company's mission of
+                    transforming the way people shop and empowering local communities in Nigeria. Farstcart is dedicated to
+                    connect consumers with local retailers, making shopping convenient, efficient, and sustainable.
                   </p>
                 </div>
               </div>
@@ -342,7 +353,12 @@
                 to work with a team of talented Software Engineers
               </p>
 
-              <a href="./assets/documents/00 Ebenmelu Ifechukwu's Mobile Application Developer Resume.pdf" target="_blank" class="btn">My Resume</a>
+              <a
+                href="./assets/documents/00 Ebenmelu Ifechukwu's Mobile Application Developer Resume.pdf"
+                target="_blank"
+                class="btn"
+                >My Resume</a
+              >
             </div>
 
             <div class="about__photo-container">
