--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               </div>
               <div class="timeline__container right">
                 <div class="content">
-                  <h3>Moblie Application Developer &nbsp;<span>(May 2023 - Present)</span></h3>
+                  <h3>Mobile Application Developer &nbsp;<span>(May 2023 - Present)</span></h3>
                   <h4>Farstcart Technologies Ltd</h4>
                   <p>
                     ...As a software engineer at FarstCart, I play a vital role in driving the company's mission of
