Revert: Remove experience

--- a/index.html
+++ b/index.html
@@ -260,6 +260,17 @@
                   </p>
                 </div>
               </div>
+              <div class="timeline__container right">
+                <div class="content">
+                  <h3>Mobile Application Developer &nbsp;<span>(May 2023 - Present)</span></h3>
+                  <h4>Farstcart Technologies Ltd</h4>
+                  <p>
+                    ...As a software engineer at FarstCart, I play a vital role in driving the company's mission of
+                    transforming the way people shop and empowering local communities in Nigeria. Farstcart is dedicated to
+                    connect consumers with local retailers, making shopping convenient, efficient, and sustainable.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
