--- a/index.html
+++ b/index.html
@@ -265,9 +265,20 @@
                   <h3>Mobile Application Developer &nbsp;<span>(May 2023 - Present)</span></h3>
                   <h4>Farstcart Technologies Ltd</h4>
                   <p>
-                    ...As a software engineer at FarstCart, I play a vital role in driving the company's mission of
-                    transforming the way people shop and empowering local communities in Nigeria. Farstcart is dedicated to
-                    connect consumers with local retailers, making shopping convenient, efficient, and sustainable.
+                    As a Mobile Software Engineer, I play a pivotal role in advancing the company's mission to revolutionize
+                    the shopping experience and empower local communities in Nigeria, while also spearheading logistics
+                    solutions
+                  </p>
+                </div>
+              </div>
+              <div class="timeline__container left">
+                <div class="content">
+                  <h3>Mobile Application Developer &nbsp;<span>(June 2023 - Present)</span></h3>
+                  <h4>SanwoPay</h4>
+                  <p>
+                    As a Mobile Software Engineer, I play a crucial role in the Design, development, and maintenance of this
+                    FinTech company's high-quality unified mobility payment marketplace mobile application for both Android
+                    and iOS platforms, with a primary focus on frontend development. mobile app
                   </p>
                 </div>
               </div>
