--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                   <h4>Leon Enterprise (Tune L.L.C)</h4>
                   <p>
                     Worked with a cross-functional team of Software Developers to build a mobile app with collaborative media
-                    streaming features.
+                    streaming features
                   </p>
                 </div>
               </div>
@@ -256,7 +256,7 @@
                   <h4>Technobs Digital Solutions</h4>
                   <p>
                     Worked to deliver cross-platform mobile apps for company's clients and I was also in-charge of guiding
-                    and tutoring interns on Flutter as an alternative to native mobile application development.
+                    and tutoring interns on Flutter as an alternative to native mobile application development
                   </p>
                 </div>
               </div>
@@ -278,7 +278,7 @@
                   <p>
                     As a Mobile Software Engineer, I play a crucial role in the Design, development, and maintenance of this
                     FinTech company's high-quality unified mobility payment marketplace mobile application for both Android
-                    and iOS platforms, with a primary focus on frontend development. mobile app
+                    and iOS platforms, with a primary focus on frontend development
                   </p>
                 </div>
               </div>
