--- a/index.html
+++ b/index.html
@@ -199,31 +199,29 @@
               </div>
             </div>
 
-            <!-- <div class="project__box">
+            <div class="project__box">
               <div class="project__text">
-                <h3>Ventry</h3>
-                <p>An online shop management system mobile application <span>(In progress)</span></p>
+                <h3>Weather Prediction App</h3>
+                <p>A Flutter application to view current weather status.</p>
                 <h4>Tech Stack</h4>
                 <ul class="project__list">
-                  <li>Kotlin</li>
-                  <li>Android S.D.K</li>
-                  <li>Android Jetpack</li>
-                  <li>Kotlin DSL</li>
+                  <li>Dart</li>
+                  <li>Flutter S.D.K</li>
                 </ul>
 
                 <div class="project__links">
                   <a href="https://noahweasley.github.io/Color-Scheme-Generator-V2/" class="link__text" target="_blank">
                     Download Latest Version<span>&rarr;</span>
                   </a>
-                  <a href="https://github.com/noahweasley/Color-Scheme-Generator-V2" target="_blank">
+                  <a href="https://github.com/noahweasley/Weather-App" target="_blank">
                     <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
                   </a>
                 </div>
               </div>
               <div class="project__image-box unavailable">
-                <img src="./assets/images/projects/project-6.png" class="project__image" alt="Project 5" />
+                <img src="./assets/images/projects/project-7.png" class="project__image" alt="Project 5" />
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </section>
