Remove weather app

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               </div>
             </div>
 
-            <div class="project__box">
+            <!-- <div class="project__box">
               <div class="project__text">
                 <h3>Weather Prediction App</h3>
                 <p>A Flutter application to view current weather status.</p>
@@ -221,7 +221,7 @@
               <div class="project__image-box unavailable">
                 <img src="./assets/images/projects/project-7.png" class="project__image" alt="Project 5" />
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
