Add 2 new projects

--- a/index.html
+++ b/index.html
@@ -199,10 +199,13 @@
               </div>
             </div>
 
-            <!-- <div class="project__box">
+            <div class="project__box">
               <div class="project__text">
                 <h3>Weather Prediction App</h3>
-                <p>A Flutter application to view current weather status.</p>
+                <p>
+                  A cross platform mobile app to display current weather of any city and predicts 5 consecutive days weather
+                  conditions.
+                </p>
                 <h4>Tech Stack</h4>
                 <ul class="project__list">
                   <li>Dart</li>
@@ -210,8 +213,8 @@
                 </ul>
 
                 <div class="project__links">
-                  <a href="https://noahweasley.github.io/Color-Scheme-Generator-V2/" class="link__text" target="_blank">
-                    Download Latest Version<span>&rarr;</span>
+                  <a href="./assets/others/weather_v1.0.0.apk" class="link__text" target="_blank">
+                    Download for Android<span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/Weather-App" target="_blank">
                     <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
@@ -219,9 +222,35 @@
                 </div>
               </div>
               <div class="project__image-box unavailable">
-                <img src="./assets/images/projects/project-7.png" class="project__image" alt="Project 5" />
+                <img src="./assets/images/projects/project-8.png" class="project__image" alt="Project 5" />
               </div>
-            </div> -->
+            </div>
+
+            <div class="project__box">
+              <div class="project__text">
+                <h3>Clean Sweep (NPM Library)</h3>
+                <p>
+                  A simple script when executed, deletes all empty files and folders in a target directory.
+                </p>
+                <h4>Tech Stack</h4>
+                <ul class="project__list">
+                  <li>Javascript</li>
+                  <li>Node JS</li>
+                </ul>
+
+                <div class="project__links">
+                  <a href="https://www.npmjs.com/package/clean-sweep" class="link__text" target="_blank">
+                    View N.P.M Package <span>&rarr;</span>
+                  </a>
+                  <a href="https://github.com/noahweasley/Clean-Sweep" target="_blank">
+                    <img src="./assets/svg/github.svg" class="project__code" title="View Source Code" alt="GitHub" />
+                  </a>
+                </div>
+              </div>
+              <div class="project__image-box unavailable">
+                <img src="./assets/images/projects/project-9.png" class="project__image" alt="Project 5" />
+              </div>
+            </div>
           </div>
         </div>
       </section>
