Remove clean sweep script project

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               </div>
             </div>
 
-            <div class="project__box">
+            <!-- <div class="project__box">
               <div class="project__text">
                 <h3>Clean Sweep (NPM Library)</h3>
                 <p>
@@ -250,7 +250,7 @@
               <div class="project__image-box unavailable">
                 <img src="./assets/images/projects/project-9.png" class="project__image" alt="Project 5" />
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
