Update app name

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
             <div class="project__box">
               <div class="project__text">
-                <h3>Weather Prediction App</h3>
+                <h3>Weather</h3>
                 <p>
                   A cross platform mobile app to display current weather of any city and predicts 5 consecutive days weather
                   conditions.
