--- a/index.html
+++ b/index.html
@@ -213,7 +213,11 @@
                 </ul>
 
                 <div class="project__links">
-                  <a href="./assets/others/weather_v1.0.0.apk" class="link__text" target="_blank">
+                  <a
+                    href="https://github.com/noahweasley/Weather/releases/download/v0.1.0/weather.apk"
+                    class="link__text"
+                    target="_blank"
+                  >
                     Download for Android<span>&rarr;</span>
                   </a>
                   <a href="https://github.com/noahweasley/Weather-App" target="_blank">
