Add Weather project

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="timeline">
               <div class="timeline__container left">
                 <div class="content">
-                  <h3>Nnamdi Azikiwe University &nbsp;<span>(2017 - 2023)</span></h3>
+                  <h3>Nnamdi Azikiwe University</h3>
                   <h4>Electronics and Computer Engineering</h4>
                   <p>Studied and acquired a B.Eng degree in Hardware Engineering.</p>
                 </div>
@@ -305,7 +305,7 @@
               <div class="timeline__container left">
                 <div class="content">
                   <h3>Mobile Application Developer &nbsp;<span>(June 2023 - Present)</span></h3>
-                  <h4>SanwoPay</h4>
+                  <h4>Trowpass</h4>
                   <p>
                     As a Mobile Software Engineer, I play a crucial role in the Design, development, and maintenance of this
                     FinTech company's high-quality unified mobility payment marketplace mobile application for both Android
