--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.jpg" />
-    <title>Ebenmelu Ifechukwu | Software Engineer Focused on Building Purposeful and Impactful Products</title>
+    <title>Ebenmelu Ifechukwu | Software Engineer Focused on Building Software with Users' Satisfaction in Mind</title>
     <meta name="description" content="Software Engineer | Mobile Software Engineer" />
     <meta
       name="keywords"
