--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="./assets/images/favicon.jpg" />
-    <title>Ebenmelu Ifechukwu | Software Engineer Focused on Building Purposeful and Impactful Products</title>
+    <title>Ebenmelu Ifechukwu | Software Engineer Focused on Building Software with Users' Satisfaction in Mind</title>
     <meta name="description" content="Software Engineer | Mobile Software Engineer" />
     <meta
       name="keywords"
@@ -41,7 +41,7 @@
           <h1 class="heading-primary">
             <span>Ebenmelu Ifechukwu</span>
           </h1>
-          <p>Software Engineer Focused on Building Purposeful and Impactful Products</p>
+          <p>Software Engineer Focused on Building Software with Users' Satisfaction in Mind</p>
           <a href="#contact" class="btn btn--accent">Get in touch</a>
         </div>
       </div>
