--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                 <div class="content">
                   <h3>Nnamdi Azikiwe University</h3>
                   <h4>Electronics and Computer Engineering</h4>
-                  <p>Studied and acquired a B.Eng degree in Hardware Engineering.</p>
+                  <p>Studied and acquired a B.Eng degree in Electronic and Computer Engineering - Computer and Control.</p>
                 </div>
               </div>
               <div class="timeline__container right">
