Rename section title to "Featured projects"

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main role="main">
       <section class="project" id="project">
         <div class="row">
-          <h2>Side Projects</h2>
+          <h2>Featured Projects</h2>
           <div class="project__boxes">
             <div class="project__box">
               <div class="project__text">
