Update latest experience

--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
               </div>
               <div class="timeline__container right">
                 <div class="content">
-                  <h3>Mobile Application Developer &nbsp;<span>(May 2023 - Present)</span></h3>
+                  <h3>Mobile Application Developer &nbsp;<span>(May 2023 - Feb 2024)</span></h3>
                   <h4>Farstcart Technologies Ltd</h4>
                   <p>
-                    As a Mobile Software Engineer, I play a pivotal role in advancing the company's mission to revolutionize
+                    As a Mobile Software Engineer, I played a pivotal role in advancing the company's mission to revolutionize
                     the shopping experience and empower local communities in Nigeria, while also spearheading logistics
                     solutions
                   </p>
@@ -310,6 +310,15 @@
                     As a Mobile Software Engineer, I play a crucial role in the Design, development, and maintenance of this
                     FinTech company's high-quality unified mobility payment marketplace mobile application for both Android
                     and iOS platforms, with a primary focus on frontend development
+                  </p>
+                </div>
+              </div>
+              <div class="timeline__container right">
+                <div class="content">
+                  <h3>Software Engineer &nbsp;<span>(Mar 2024 - Present)</span></h3>
+                  <h4>Stellar Eminence</h4>
+                  <p>
+                    I just started :)
                   </p>
                 </div>
               </div>
