Update skill section

--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
                   <h3>Mobile Application Developer &nbsp;<span>(May 2023 - Feb 2024)</span></h3>
                   <h4>Farstcart Technologies Ltd</h4>
                   <p>
-                    As a Mobile Software Engineer, I played a pivotal role in advancing the company's mission to revolutionize
-                    the shopping experience and empower local communities in Nigeria, while also spearheading logistics
-                    solutions
+                    As a Mobile Software Engineer, I played a pivotal role in advancing the company's mission to
+                    revolutionize the shopping experience and empower local communities in Nigeria, while also spearheading
+                    logistics solutions
                   </p>
                 </div>
               </div>
@@ -313,7 +313,6 @@
                   </p>
                 </div>
               </div>
-              </div>
             </div>
           </div>
         </div>
@@ -326,39 +325,25 @@
           <div class="column">
             <div class="row">
               <h3>Software Development</h3>
-              <p>Java</p>
-              <div class="skill__container">
-                <div class="skill" style="--strength: 90%">90%</div>
-              </div>
 
-              <p>JavaScript</p>
-              <div class="skill__container">
-                <div class="skill" style="--strength: 75%">70%</div>
-              </div>
-
-              <p>Dart</p>
-              <div class="skill__container">
-                <div class="skill" style="--strength: 80%">80%</div>
-              </div>
-
-              <p>Kotlin</p>
-              <div class="skill__container">
-                <div class="skill" style="--strength: 50%">50%</div>
-              </div>
-
-              <p>Android S.D.K</p>
+              <p>Java, Kotlin & the Android S.D.K</p>
               <div class="skill__container">
                 <div class="skill" style="--strength: 70%">70%</div>
               </div>
 
-              <p>Flutter</p>
+              <p>Dart & Flutter</p>
               <div class="skill__container">
                 <div class="skill" style="--strength: 90%">90%</div>
               </div>
 
-              <p>Node JS</p>
+              <p>Javascript & Node JS</p>
               <div class="skill__container">
                 <div class="skill" style="--strength: 80%">80%</div>
+              </div>
+
+              <p>React & Next JS</p>
+              <div class="skill__container">
+                <div class="skill" style="--strength: 30%">30%</div>
               </div>
             </div>
 
